# EasyContact.Legacy

./: .gitignore  .gitmodules  CMakeLists.txt  DifferenceBetweenCaptureAndParam.cpp  Dispatch.cpp  LICENSE  Makefile  README.md  Test.cpp  TestCapture.cpp  package-lock.json
.FILES/CONFIG/: .stylelintrc.json
.FILES/WIKI/: INSTALL-GUIDE.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.md  FEATURE-REQUEST.md
.github/workflows/: CodeQL(CPP)  CodeQL(CPP).yml  CodeQL(JavaScript).yml  Format(CPP).yml  Lint(CPP).yml  Lint(CSS).yml
Backend/: APIRouter.h  CMakeLists.txt  Contact.h  ContactBook.h  GlobalMutex.hpp  GroupContact.h  MainExecutable.cpp  Makefile  README.md  SignalHandler.h
Backend/API/: API.docx  APIRouter.h  APIRouter.hpp  README.md  UserToken.hpp
Backend/ContactSystem/: Book.cpp  Book.h  Book.hpp  Books.cpp  Books.hpp  Contact.cpp  Contact.h  ContactBook.cpp  ContactBook.h  ContactBook.hpp  DiskOperate.cpp  DiskOperate.hpp  DiskRW.cpp  DiskRW.hpp  GroupContact.cpp  GroupContact.h  Import.h  Key.h  Key.hpp  README.md  Resources.h  Tags.cpp  Tags.h  Tags.hpp  Triple.h  Triple.hpp
Backend/ContactSystem/.AssertionTests/: TestContact.cpp  TestContactBook.cpp  Test_Key.cpp  Test_Tags.cpp
Backend/DiskRW/: CSVReadWrite.cpp  CSVReadWrite.hpp  DataReadWrite.cpp  DataReadWrite.hpp  DatabaseReadWrite.cpp  DatabaseReadWrite.hpp  DiskRW.cpp  DiskRW.hpp  README.md
Backend/Executable/: DispatchQueue.cpp  DispatchQueue.hpp  GlobalMutex.hpp  Main.cpp  MultiClientMain.cpp  README.md  SingleUser.cpp  SingleUser.hpp  StreamProcessor.hpp  SysLogs.hpp
Backend/MailClient/: MailClient.cpp  MailClient.hpp  README.md
Backend/MailClient/example_test_file/: MailClient.cpp  MailClient.hpp  func_functions.cpp  imap_folders.cpp  imap_recv.cpp  imap_remove_msg.cpp  imaps_search.cpp  imaps_stat.cpp  sent_smtp.cpp  temp_readme.md
Backend/MainExecutable/: MainExecutable.cpp
Backend/SQLContacts/: ContactReadWrite.hpp  Contacts.cpp  Contacts.hpp  README.md
Backend/data/: README.md
Backend/data/.DEFAULT/: Contacts.db3
Backend/doc/: HTTPRouter.md  README.md
Backend/include/: README.md
Backend/include/EasyContact/: APIRouter.hpp  ColorfulOutput.hpp  Contacts.hpp  DispatchQueue.hpp  GlobalMutex.hpp  HTTPRouter.hpp  MailClient.hpp  SingleUser.hpp  SysLogs.hpp  UserToken.hpp
Backend/lib/: README.md
Backend/src/: Contacts.cpp  DispatchQueue.cpp  GlobalMutex.cpp  MailClient.cpp  MultiClientMain.cpp  README.md  SingleUser.cpp
EasyContact/: README.md  package-lock.json  package.json
Executable/DATABASE/: UserContacts.csv  UserTags.csv
Frontend/: README.md  package-lock.json  package.json  server.js  sign.css  sign_in.html  test.html
Frontend/data/: messages.js
Frontend/html-version/: sign.css  sign_in.html
Frontend/src/: App.css  App.js  index.css  index.js
Frontend/src/chat/chat-form/: Chat-Form.css  Chat-Form.js
Frontend/src/chat/chat-title/: Chat-Title.css  Chat-Title.js
Frontend/src/chat/conversation/: Conversation-Item.js  Conversation-List.js  Conversation-Search.css
Frontend/src/chat/message/: Message-List.js
Frontend/src/chat/shell/: Chat-Shell.css  Chat-Shell.js
Frontend/src/components/: Backdrop.js
Frontend/src/components/chat-form/: Chat-Form.css  Chat-Form.js
Frontend/src/components/chat-title/: Chat-Title.js
Frontend/src/components/conversation/conversation-item/: Conversation-Item.css  Conversation-Item.js
Frontend/src/components/conversation/conversation-list/: Conversation-List.css  Conversation-List.js
Frontend/src/components/conversation/conversation-search/: Conversation-Search.css  Conversation-Search.js
Frontend/src/components/conversation/new-conversation/: New-Conversation.css
Frontend/src/components/message/: Message-List.css  Message-List.js  Message.css  Message.js
Frontend/src/containers/shell/: Chat-Shell.css  Chat-Shell.js
Frontend/src/data/: conversations.js
Frontend/src/reducers/: conversations.js  index.js
Frontend/src/store/reducers/: conversations.js
UserData/: README.md
UserData/.DEFAULT/: Contacts.db3  README.md
UserData/gongz2/: Contacts.db3
example_test_file/: imap_recv.cpp  recv_pop3.cpp  smtp_sent.cpp  temp_readme.md
moz-todo-react/: package-lock.json
