# CMake Flags
cmake_minimum_required(VERSION 3.13)
PROJECT(EasyContact VERSION 0.43)
CMAKE_POLICY(SET CMP0079 NEW)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED True)
SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g -Wall -Wextra")
SET(CMAKE_CXX_FLAGS_RELEASE "-w -O3 -DNDEBUG")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")

# Library
SET(LIBHVR lib/libhv)
SET(SQLITE lib/SQLite)
SET(MAILIO lib/mailio)
file(GLOB SOURCE
  "${PROJECT_SOURCE_DIR}/src/*.cpp"
)
file(GLOB HEADERS
  "${PROJECT_SOURCE_DIR}/include/EasyContact/*.hpp"
)

# Libhv
SET(BUILD_STATIC OFF CACHE BOOL "" FORCE)
SET(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
SET(WITH_HTTP_CLIENT OFF CACHE BOOL "" FORCE)

# SQLiteCpp
SET(SQLITECPP_RUN_CPPCHECK OFF CACHE BOOL "" FORCE)
SET(SQLITECPP_RUN_CPPLINT OFF CACHE BOOL "" FORCE)

# Mailio
SET(MAILIO_BUILD_DOCUMENTATION OFF CACHE BOOL "" FORCE)
SET(MAILIO_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)

# SubModules Directory
add_subdirectory(${SQLITE})
add_subdirectory(${LIBHVR})
add_subdirectory(${MAILIO})
include_directories(${PROJECT_SOURCE_DIR}/${LIBHVR}/include)
include_directories(${PROJECT_SOURCE_DIR}/${SQLITE}/include)
include_directories(${PROJECT_SOURCE_DIR}/${MAILIO}/include)
include_directories(${PROJECT_SOURCE_DIR}/include)

# Compile
add_executable(EasyContact ${SOURCE} ${HEADERS})
SET(THREADS_PREFER_PTHREAD_FLAG on)
find_package(Threads REQUIRED)
target_link_libraries(EasyContact
  PUBLIC m
  PUBLIC Threads::Threads
  PUBLIC SQLiteCpp
  PUBLIC hv
  PUBLIC mailio
)
add_dependencies(EasyContact hv SQLiteCpp)
