# CMake Flags
CMAKE_MINIMUM_REQUIRED(VERSION 3.13)
PROJECT(EasyContact VERSION 0.43)
CMAKE_POLICY(SET CMP0079 NEW)
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED True)
SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g -Wall -Wextra")
SET(CMAKE_CXX_FLAGS_RELEASE "-w -O3 -DNDEBUG")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")

# Library
SET(LIBHVR lib/libhv)
SET(SQLITE lib/SQLite)
SET(VMIME lib/VMime)
FILE(GLOB SOURCE "${PROJECT_SOURCE_DIR}/src/*.cpp")

# Libhv
SET(BUILD_STATIC OFF CACHE BOOL "" FORCE)
SET(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
SET(WITH_HTTP_CLIENT OFF CACHE BOOL "" FORCE)

# SQLiteCpp
SET(SQLITECPP_RUN_CPPCHECK OFF CACHE BOOL "" FORCE)
SET(SQLITECPP_RUN_CPPLINT OFF CACHE BOOL "" FORCE)

# VMime
SET(VMIME_BUILD_STATIC_LIBRARY OFF CACHE BOOL "" FORCE)
SET(VMIME_BUILD_SAMPLES OFF CACHE BOOL "" FORCE)
SET(VMIME_HAVE_MESSAGING_PROTO_SENDMAIL OFF CACHE BOOL "" FORCE)
SET(VMIME_HAVE_MESSAGING_PROTO_MAILDIR OFF CACHE BOOL "" FORCE)
SET(VMIME_BUILD_DOCUMENTATION OFF CACHE BOOL "" FORCE)

# SubModules Directory
ADD_SUBDIRECTORY(${SQLITE})
ADD_SUBDIRECTORY(${LIBHVR})
ADD_SUBDIRECTORY(${VMIME})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/${LIBHVR}/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/${SQLITE}/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/${VMIME}/src)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

# Compile
ADD_EXECUTABLE(EasyContact ${SOURCE})
SET(THREADS_PREFER_PTHREAD_FLAG on)
FIND_PACKAGE(Threads REQUIRED)
TARGET_LINK_LIBRARIES(EasyContact
  PUBLIC m
  PUBLIC Threads::Threads
  PUBLIC SQLiteCpp
  PUBLIC hv
  PUBLIC VMime
)
ADD_DEPENDENCIES(EasyContact hv SQLiteCpp)
